cabal-version: 2.2
name: blog-reflex
version: 0.1.0
build-type: Simple

common shared
  hs-source-dirs: exe, src
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-extensions: OverloadedStrings
                    , TemplateHaskell
  build-depends: aeson
               , base
               , boomerang
               , bytestring
               , case-insensitive
               , cereal
               , containers
               , cookie
               , cryptonite
               , dependent-sum
               , ghcjs-dom
               , hashable
               , jsaddle
               , lens
               , monoidal-containers
               , morpheus-graphql-core
               , morpheus-graphql-client
               , mtl
               , path-pieces
               , random
               , ref-tf
               , reflex
               , reflex-dom-core
               , rio
               , semialign
               , text
               , transformers
               , unliftio

common shared-ghc
  build-depends: generics-sop
               , http-client
               , http-types
               , morpheus-graphql
               , req
               , sessionula
               , sessionula-extra
               , sessionula-file
               , sessionula-wai
               , squeal-postgresql
               , wai
               , wai-cors
               , wai-extra
               , wai-static-th
               , warp

executable devel
  import: shared, shared-ghc
  main-is: Server.hs
  hs-source-dirs: src-ghc
  if impl(ghcjs)
    buildable: False
  build-depends: jsaddle-warp
               , wai-websockets
               , websockets

executable server
  import: shared, shared-ghc
  main-is: Server.hs
  hs-source-dirs: src-ghc
  if impl(ghcjs)
    buildable: False

executable client
  import: shared
  main-is: Server.hs
  ghcjs-options: -dedupe
  cpp-options: -DGHCJS_BROWSER
